--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "chai": "4.2.0",
     "chromedriver": "76.0.0",
     "mocha": "6.2.0",
-    "selenium-webdriver": "4.0.0-alpha.4"
+    "mochawesome": "^4.1.0",
+    "selenium-webdriver": "^3.6.0"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha library.js",
-    "test-1": "node_modules/.bin/mocha using-mocha.js"
+    "test-1": "node_modules/.bin/mocha using-mocha.js --reporter mochawesome"
   },
   "author": "",
   "license": "ISC"
